--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,12 +25,14 @@
     "next": "13.2.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-resize-detector": "^7.1.2",
+    "reactstrap": "^9.1.9",
     "swr": "^2.1.0"
   },
   "devDependencies": {
