--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,3 +1,12 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
+asgiref==3.6.0
+click==8.1.3
+fastapi==0.68.2
+h11==0.14.0
+mariadb==1.1.6
+packaging==23.1
+pydantic==1.10.7
+starlette==0.14.2
+tomli==2.0.1
+typing_extensions==4.5.0
+uvicorn==0.15.0
+yapf==0.33.0
