--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/jquery": "^3.5.16",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
     "chart.js": "^3.9.1",
